--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
     padding: 0;
 }
 
-
 body{ 
     width: 999px;
     margin: 0 auto;
@@ -19,7 +18,6 @@ body{
 #header .logo{
     width: 250px;
     height: 30px;
-    background-color: tomato;
     float: left;
     margin: 36px 0px 34px 17px;
 }
@@ -95,12 +93,10 @@ body{
 
 #news{
     height: 546px;
-    background-color: blue;
 }
 
 #news .new-1{
     height: 241px;
-    background-color: yellow;
 }
 
 #news .new-1 .section1{
@@ -166,18 +162,49 @@ body{
     line-height: 25px;
     font-size: 11px;
     color: #949494;
-    width: 178px;
+    width: 192px;
 }
 
-
-
-
-
 #news .new-1 .section3{
+    padding-left: 25px;
     float: left;
-    width: 259px;
+    width: 234px;
     height: 241px;
-    background-color:olive;
+    background-color:#fbfbfb;
+    background-image: url("../img/info3bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom 15px left 164px;
+
+}
+
+#news .new-1 .section3 h3{
+    width: 93px;
+    line-height: 93px;
+    font-size: 18px;
+    color: #242424;
+}
+
+#news .new-1 .section3 .info3{
+    line-height: 25px;
+    font-size: 11px;
+    width: 180px;
+    color: #787878;
+}
+
+#news .new-1 .section3 .morebtn{
+    margin-top: 42px;
+    border: none;
+}
+
+#news .new-1 .section3 .morebtn input{
+    float: left;
+    width: 66px;
+    height: 19px;
+    background-color: #b0b0b0;
+    border-radius:2px;
+    border: none;
+    font-size: 7px;
+    color: white;
 }
 
 #news .new-2{
