--- a/css/styles.css
+++ b/css/styles.css
@@ -205,14 +205,135 @@ body{
     border: none;
     font-size: 7px;
     color: white;
+    outline: none;
 }
 
 #news .new-2{
     height: 305px;
-    background-color:palevioletred;
+}
+
+#news .new-2 h3{
+    padding: 30px 0 17px 23px;
+    color: #242424;
+    font-size: 18px;
+    height: 18px;
+}
+
+
+#news .new-2 .marketinfo{
+    width: 959px;
+    height: 240px;
+    padding: 0 20px;
+
+}
+
+#news .new-2 .marketinfo .infobox{
+    float: left;
+    width: 210px;
+    height: 240px;
+}
+
+#news .new-2 .marketinfo a{
+    text-decoration: none;
+    color: #6a6a6a;
+    font-size: 11px;
+    text-align: justify;
 }
 
 #footer{
     height: 331px;
-    background-color: #e5e5e5;
 }
+
+#footer .section1{
+    height: 220px;
+    padding-top: 30px;
+    background-color: #e5e5e5 ;
+}
+
+#footer .section1 .view1{
+    width: 452px;
+    margin-left: 30px;
+    float: left;
+}
+
+#footer .section1 .view2{
+    width: 154px;
+    margin-left: 40px;
+    float: left;
+}
+
+#footer .section1 .view3{
+    width: 255px;
+    margin-left: 53px;
+    float: left;
+}
+
+#footer .section1 h3{
+    padding: 0 0 10px 3px;
+    font-size: 16px;
+    color: #5c5c5c;
+    border-bottom: 1px solid #c2c2c2;
+    font-weight: normal;
+}
+
+#footer .section1 ul{
+    padding-top: 20px;
+    float: left;
+}
+
+#footer .section1 ul li{
+    list-style-image: url("../img/liitem2.png"); 
+    list-style-position: inside;
+    line-height: 24px;
+}
+
+#footer .section1 ul li a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #989898;
+}
+
+#footer .section1 .view3 img{
+    margin: 12px 0 0 30px; 
+}
+
+#footer .section2{
+    height: 81px;
+}
+
+#footer .section2 ul{
+    list-style: none;
+    padding: 24px 0 0 20px;
+    float: left;
+}
+
+#footer .section2 ul li{
+    float: left;
+}
+
+#footer .section2 ul li a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #8b8b8b;
+}
+
+#footer .section2 .shareitem{
+    float: right;
+    padding-top: 26px;
+}
+
+#footer .section2 .shareitem a{
+    text-decoration: none;
+}
+
+#footer .section2 span{
+    padding-top: 26px;
+    float: right;
+    font-size: 9px;
+    color: #8b8b8b;
+}
+
+
+
+
+
